--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
 <h1>Webcam Video</h1>
-<video id='webcam' autoplay height="480" width="600"></video>
+<div id='liveView' class="camView">
+    <video id='webcam' autoplay height="480" width="640"></video>
+</div>
