keep coco-ssd model in app

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <h1>Webcam Video</h1>
 <div id='liveView' class="camView">
-    <video id='webcam' autoplay height="480" width="640"></video>
+    <video id='webcam' autoplay height="480" width="640" (playing)="predictWebcam()"></video>
 </div>
