--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -28,7 +28,7 @@ video {
   
   .highlighter {
     background: rgba(0, 255, 0, 0.25);
-    border: 1px dashed #fff;
+    border: 1px dashed #ffffff;
     z-index: 1;
     position: absolute;
   }
